# NatTypeTester_CLI

./: .gitignore  README.md
.github/workflows/: c-cpp.yml
build_ser/: CMakeCache.txt  Makefile  cmake_install.cmake  nat_type_tester_rfc5382_server  nat_type_tester_server
src/: CMakeLists.txt  discovery.cpp  discovery.hpp  main.cpp  rfc4787.cpp  rfc4787.hpp  rfc5382.cpp  rfc5382.hpp  rfc5508.cpp  rfc5508.hpp  rfc7857.cpp  rfc7857.hpp  stun.cpp  stun.hpp  tests.cpp
src_ser/: CMakeLists.txt  main.cpp
